--- a/builtins/pom.xml
+++ b/builtins/pom.xml
@@ -64,6 +64,7 @@
                         <configuration>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
+                                <arg>-Werror</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
