--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -400,7 +400,7 @@
                             </excludes>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
-                                <arg>-Werror</arg>
+                                <!--                                <arg>-Werror</arg>-->
                             </compilerArgs>
                         </configuration>
                     </execution>
@@ -416,7 +416,7 @@
                             <release>22</release>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
-                                <arg>-Werror</arg>
+                                <!--                                <arg>-Werror</arg>-->
                             </compilerArgs>
                         </configuration>
                     </execution>
