--- a/pom.xml
+++ b/pom.xml
@@ -431,7 +431,7 @@
                         <release>${java.release.version}</release>
                         <compilerArgs>
                             <arg>-Xlint:all,-options,-processing</arg>
-                            <arg>-Werror</arg>
+                            <!--                            <arg>-Werror</arg>-->
                         </compilerArgs>
                         <fork>true</fork>
                     </configuration>
