--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, ubuntu-22.04, windows-latest, macos-latest ]
-        java: [ '23' ]
+        java: [ '22', '24' ]
     steps:
       - uses: actions/checkout@v4
 
