fix: implement workaround for nested shell interruption handling
This commit implements a workaround to fix the issue with interruption handling
in nested shells. The fix clears the current pipe before creating a child shell
and restores it afterward, ensuring that when Ctrl+C is pressed in a child shell
(e.g., when running 'sh' followed by 'ttop'), the interruption signal is properly
propagated to the child process.

The implementation uses reflection to access the Pipe.setCurrentPipe method in
Felix Gogo runtime, which is currently private. The proper fix has been submitted
to the Felix project in two PRs:
1. https://github.com/apache/felix-dev/pull/411 - Make Pipe.setCurrentPipe public
2. https://github.com/apache/felix-dev/pull/412 - Update Posix.runShell to handle nested shells

Once these PRs are merged and released, the modified Shell.java and Posix.java
classes should be removed from JLine and the official Felix Gogo JLine
implementation should be used instead.

Fixes #1143

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -241,7 +241,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>-Xlint:all,-options,-processing,-restricted,-removal</arg>
+                        <arg>-Xlint:all,-options,-processing,-restricted,-removal,-classfile</arg>
                         <arg>-Werror</arg>
                     </compilerArgs>
                 </configuration>
