Try fixing the website

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -30,6 +30,8 @@ jobs:
           cache-dependency-path: website/package-lock.json
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        with:
+          enablement: true
       - name: Install dependencies
         run: cd website && npm ci
       - name: Build
