--- a/style/pom.xml
+++ b/style/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.30.0</version>
+        <version>3.30.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-style</artifactId>
