--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: website/target
+          path: website/target/build
 
   deploy:
     environment:
