docs: Improve website build system and documentation management
- Integrate website build commands into main build script
- Add version management system with placeholders (%%JLINE_VERSION%%)
- Consolidate build output to website/target directory
- Update GitHub workflow for website deployment
- Add documentation for version management
- Remove deprecated build scripts
- Improve code snippet handling

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -32,14 +32,12 @@ jobs:
         uses: actions/configure-pages@v5
         with:
           enablement: true
-      - name: Install dependencies
-        run: cd website && npm ci
-      - name: Build
-        run: cd website && npm run build
+      - name: Build website
+        run: ./build website
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: website/build
+          path: website/target
 
   deploy:
     environment:
