--- a/build.config
+++ b/build.config
@@ -17,3 +17,37 @@ function command_repl() {
 function command_graal() {
   exec graal/target/graal $*
 }
+
+function command_website() {
+  # Change to website directory
+  cd website
+
+  # Install dependencies
+  echo "Installing dependencies..."
+  npm install
+
+  # Build the website (this will extract snippets and replace version placeholders)
+  echo "Building website..."
+  npm run build
+
+  echo "Website built successfully in website/target directory"
+  echo "To preview the website, run: ./build website-serve"
+}
+
+function command_website-dev() {
+  # Change to website directory
+  cd website
+
+  # Start the development server with snippets and version placeholders replaced
+  echo "Starting development server..."
+  npm run start-with-snippets
+}
+
+function command_website-serve() {
+  # Change to website directory
+  cd website
+
+  # Serve the built website
+  echo "Serving website from website/target directory..."
+  npm run serve
+}
