--- a/website/package.json
+++ b/website/package.json
@@ -6,11 +6,12 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "extract-snippets": "mkdir -p ./target/static/snippets && node scripts/extract-snippets.js ../demo/src/main/java/org/jline/demo/examples ./target/static/snippets",
+    "validate-snippets": "node scripts/validate-snippets.js ./docs ./target/static/snippets",
     "replace-version": "node scripts/replace-version.js",
     "replace-version-source": "node scripts/replace-version.js --source",
     "revert-version-source": "node scripts/replace-version.js --source --revert",
-    "start-with-snippets": "npm run extract-snippets && npm run replace-version-source && npm start",
-    "build": "npm run extract-snippets && npm run replace-version-source && docusaurus build --out-dir=./target/build && npm run revert-version-source",
+    "start-with-snippets": "npm run extract-snippets && npm run validate-snippets && npm run replace-version-source && npm start",
+    "build": "npm run extract-snippets && npm run validate-snippets && npm run replace-version-source && docusaurus build --out-dir=./target/build && npm run revert-version-source",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
