--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ on:
         description: The version to release (will be inferred from the pom version by default).
         required: false
       next-version:
-        description: The next developement version (will be inferred from the pom version by default).
+        description: The next development version (will be inferred from the pom version by default).
         required: false
       java-version:
         description: The java version to use
@@ -31,7 +31,7 @@ on:
       maven-version:
         description: The Maven version to use
         required: false
-        default:  3.9.8
+        default:  3.9.9
 
 jobs:
   release:
@@ -47,44 +47,12 @@ jobs:
         with:
           distribution: ${{ github.event.inputs.distribution }}
           java-version: ${{ github.event.inputs.java-version }}
-          cache: maven
-          server-id: central
-          server-username: MAVEN_USER
-          server-password: MAVEN_PASSWORD
-          gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
-          gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-      - name: Setup Maven
-        uses: stCarolas/setup-maven@v5
-        with:
-          maven-version: ${{ github.event.inputs.maven-version }}
-
-      - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@v6
-        with:
-          gpg_private_key: ${{ secrets.GPG_SIGNING_KEY }}
-          passphrase: ${{ secrets.GPG_PASSPHRASE }}
-          git_config_global: true
-          git_user_signingkey: true
-          git_commit_gpgsign: true
-          fingerprint: ${{ secrets.GPG_KEY_FINGERPRINT }}
-
-      - name: Diag
-        if: false
+      - name: Build Maven distributions
+        shell: bash
         run: |
-          echo "====================="
-          echo "   Maven             "
-          echo "====================="
-          mvn -v
-          echo "====================="
-          echo "   Global settings   "
-          echo "====================="
-          cat $HOME/.m2/settings.xml
-          echo ""
-          echo "====================="
-          echo "   Git config        "
-          echo "====================="
-          git config -l --global
+          cd ..
+          mvn wrapper:wrapper "-Dmaven=${{ github.event.inputs.maven-version }}"
 
       - name: Release preparation
         id: pre-release
@@ -93,17 +61,17 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           gh extension install valeriobelli/gh-milestone
-          version=$(mvn -q -DforceStdout help:evaluate -N -Dexpression=project.version | sed -rn 's/([^-]+)(-SNAPSHOT|)$/\1/p')
+          version=$(../mvnw -q -DforceStdout help:evaluate -N -Dexpression=project.version | sed -rn 's/([^-]+)(-SNAPSHOT|)$/\1/p')
           echo "version=$version" >> "$GITHUB_OUTPUT"
 
       - name: Release
         env:
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-          MAVEN_GPG_KEY_FINGERPRINT: ${{ secrets.GPG_KEY_FINGERPRINT }}
+          MAVEN_GPG_KEY: ${{ secrets.GPG_SIGNING_KEY }}
           MAVEN_USER: ${{ secrets.MAVEN_USER }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
         run: |
-          mvn -B release:prepare release:perform -Darguments="-DskipTests" -DreleaseVersion=${{ github.event.inputs.version }} -DdevelopmentVersion=${{ github.event.inputs.next-version }}
+          ../mvnw -B release:prepare release:perform -Darguments="-DskipTests -Dnjord.autoPublish -s .github/release-settings.xml" -DreleaseVersion=${{ github.event.inputs.version }} -DdevelopmentVersion=${{ github.event.inputs.next-version }}
 
       - name: Post release
         env:
@@ -118,7 +86,7 @@ jobs:
               gh milestone edit $milestone --state closed 
           fi
 
-          version=$(mvn -q -DforceStdout help:evaluate -N -Dexpression=project.version | sed -rn 's/([^-]+)(-SNAPSHOT|)$/\1/p')
+          version=$(../mvnw -q -DforceStdout help:evaluate -N -Dexpression=project.version | sed -rn 's/([^-]+)(-SNAPSHOT|)$/\1/p')
           echo "Preparing development $version"
           echo "Trying to find milestone $version"
           milestone=$(gh milestone list --json id,title,state  --jq "map_values(select(.title == \"${version}\" and .state == \"OPEN\")).[].number")
@@ -127,7 +95,7 @@ jobs:
               gh milestone create --title $version 
           fi
           
-          name=$(mvn -q -DforceStdout help:evaluate -N -Dexpression=project.name)
+          name=$(../mvn -q -DforceStdout help:evaluate -N -Dexpression=project.name)
           version=${{ steps.pre-release.outputs.VERSION }}
           tag=$(git describe --tags --abbrev=0)
           echo "Creating release \"$name $version\" from tag $tag"
