Add "bestPractices" back
But this is only to fail IF some secret comes from
"bad places". We do not provide secrets from those
places, they are in env.

--- a/pom.xml
+++ b/pom.xml
@@ -535,6 +535,7 @@
                             </goals>
                             <phase>verify</phase>
                             <configuration>
+                                <bestPractices>true</bestPractices>
                                 <useAgent>false</useAgent>
                                 <signer>bc</signer>
                             </configuration>
