--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,16 @@ jobs:
           java-version: ${{ github.event.inputs.java-version }}
           cache: maven
 
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v6
+        with:
+          gpg_private_key: ${{ secrets.GPG_SIGNING_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          git_config_global: true
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+          fingerprint: ${{ secrets.GPG_KEY_FINGERPRINT }}
+
       - name: Release preparation
         id: pre-release
         shell: bash
@@ -52,7 +62,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           gh extension install valeriobelli/gh-milestone
-          version=$(./mvnw -q -DforceStdout help:evaluate -N -Dexpression=project.version | sed -rn 's/([^-]+)(-SNAPSHOT|)$/\1/p')
+          version=$(./mvnw -q -DforceStdout --raw-streams help:evaluate -N -Dexpression=project.version | sed -rn 's/([^-]+)(-SNAPSHOT|)$/\1/p')
           echo "version=$version" >> "$GITHUB_OUTPUT"
 
       - name: Release
@@ -63,7 +73,7 @@ jobs:
           MAVEN_USER: ${{ secrets.MAVEN_USER }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
         run: |
-          ./mvnw -B release:prepare release:perform -Darguments="-DskipTests -Dnjord.autoPublish -s .github/release-settings.xml" -DreleaseVersion=${{ github.event.inputs.version }} -DdevelopmentVersion=${{ github.event.inputs.next-version }}
+          ./mvnw -B release:prepare release:perform -Darguments="-DskipTests -Dnjord.autoPublish" -s .github/release-settings.xml -DreleaseVersion=${{ github.event.inputs.version }} -DdevelopmentVersion=${{ github.event.inputs.next-version }}
 
       - name: Post release
         env:
@@ -78,7 +88,7 @@ jobs:
               gh milestone edit $milestone --state closed 
           fi
 
-          version=$(./mvnw -q -DforceStdout help:evaluate -N -Dexpression=project.version | sed -rn 's/([^-]+)(-SNAPSHOT|)$/\1/p')
+          version=$(./mvnw -q -DforceStdout --raw-streams help:evaluate -N -Dexpression=project.version | sed -rn 's/([^-]+)(-SNAPSHOT|)$/\1/p')
           echo "Preparing development $version"
           echo "Trying to find milestone $version"
           milestone=$(gh milestone list --json id,title,state  --jq "map_values(select(.title == \"${version}\" and .state == \"OPEN\")).[].number")
@@ -87,8 +97,8 @@ jobs:
               gh milestone create --title $version 
           fi
           
-          name=$(./mvnw -q -DforceStdout help:evaluate -N -Dexpression=project.name)
-          version=${{ steps.pre-release.outputs.VERSION }}
+          name=$(./mvnw -q -DforceStdout --raw-streams help:evaluate -N -Dexpression=project.name)
+          version=${{ steps.pre-release.outputs.version }}
           tag=$(git describe --tags --abbrev=0)
           echo "Creating release \"$name $version\" from tag $tag"
           gh release create $tag --verify-tag --notes-from-tag --title "$name $version"
