--- a/terminal-jni/pom.xml
+++ b/terminal-jni/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.30.1-SNAPSHOT</version>
+        <version>3.30.1</version>
     </parent>
 
     <artifactId>jline-terminal-jni</artifactId>
