--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
         <ivy.version>2.5.3</ivy.version>
         <graal.version>24.2.1</graal.version>
         <graal.plugin.version>21.2.0</graal.plugin.version>
+        <palantir.version>2.38.0</palantir.version>
 
         <surefire.argLine>--add-opens java.base/java.io=ALL-UNNAMED</surefire.argLine>
     </properties>
@@ -354,6 +355,13 @@
                 <artifactId>jsr305</artifactId>
                 <version>${findbugs.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.palantir.javaformat</groupId>
+                <artifactId>palantir-java-format</artifactId>
+                <version>${palantir.version}</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -572,7 +580,7 @@
                         <java>
                             <toggleOffOn />
                             <palantirJavaFormat>
-                                <version>2.38.0</version>
+                                <version>${palantir.version}</version>
                             </palantirJavaFormat>
                             <importOrder>
                                 <order>java|javax,org,,\#</order>
