chore: improve Maven cache fallback strategy in GitHub Actions
- Replace setup-java built-in cache with actions/cache@v4 for better control
- Add restore-keys to fallback to previous commits' caches when pom.xml unchanged
- Prevents re-downloading all Maven dependencies on every pom.xml change
- Fallback order: exact match -> same Java version -> any Maven cache

--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -38,12 +38,20 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: temurin
-          cache: maven
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-${{ matrix.java }}-
+            ${{ runner.os }}-maven-
 
       - name: Build with maven
         run: ./mvnw --no-transfer-progress verify
         if: matrix.os != 'windows-latest'
-      
+
       - name: Build with maven
         run: |
           set PATH=%JAVA_HOME%\bin;C:\Windows\System32\WindowsPowerShell\v1.0\
