--- a/remote-telnet/pom.xml
+++ b/remote-telnet/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.30.4</version>
+        <version>3.30.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-remote-telnet</artifactId>
