--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>${nisse.jgit.dynamicVersion}</version>
     </parent>
 
     <artifactId>jline</artifactId>
@@ -115,6 +115,16 @@
         <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline-style</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-native</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jansi-core</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
