--- a/reader/pom.xml
+++ b/reader/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>${nisse.jgit.dynamicVersion}</version>
     </parent>
 
     <artifactId>jline-reader</artifactId>
