Implement complete DefaultPrompter with full feature parity and PromptCommands
- Add comprehensive multi-column layout support with automatic column calculation
- Implement grid-based navigation (left/right arrow keys for columns, up/down for rows)
- Add support for disabled items with proper visual indicators
- Implement pre-checked checkbox items functionality
- Add choice items with key-based selection support
- Enhance display management using JLine's Display class for efficient updates
- Add proper pagination and scrolling support with ListRange computation
- Implement row-first and column-first layout algorithms
- Add intelligent column width calculation and margin management
- Enhance keyboard navigation with proper key binding using BindingReader
- Add terminal capability detection with fallback support
- Implement comprehensive error handling for edge cases
- Add PromptCommands for script/REPL usage similar to PosixCommands
- Support all prompt types: list, checkbox, choice, input, confirm
- Use PromptBuilder API with fluent builder patterns instead of direct instantiation
- Add PrompterFactory usage for proper abstraction
- Clean up FQCN usage with proper imports
- Achieve full feature parity with AbstractPrompt from console-ui module

The DefaultPrompter now provides a complete, native JLine3 prompt system
that doesn't depend on console-ui while offering the same rich feature set
and professional user experience with multi-column layouts and advanced navigation.

--- a/console-ui/pom.xml
+++ b/console-ui/pom.xml
@@ -9,7 +9,8 @@
     </parent>
 
     <artifactId>jline-console-ui</artifactId>
-    <name>JLine Console UI</name>
+    <name>JLine Console UI (Deprecated)</name>
+    <description>JLine Console UI - DEPRECATED: Use jline-prompt instead</description>
 
     <properties>
         <automatic.module.name>org.jline.consoleui</automatic.module.name>
