Add comprehensive jline-prompt module with modern API
- Created new jline-prompt module as replacement for deprecated ConsoleUI
- Implemented clean, fluent builder pattern API for prompts
- Added support for input, list, checkbox, and confirmation prompts
- Included multi-column layout with automatic terminal size optimization
- Built 54 comprehensive tests covering all functionality
- Created working demo examples showing API usage
- Maintained backward compatibility with existing ConsoleUI
- All tests pass and project builds successfully

Features:
- Type-safe prompt results with proper generics
- Customizable styling and configuration
- Input validation and error handling
- Dynamic prompt support
- Modern Java practices and design patterns

This provides a clean migration path from the deprecated ConsoleUI API.

--- a/prompt/pom.xml
+++ b/prompt/pom.xml
@@ -36,6 +36,10 @@
             <groupId>org.jline</groupId>
             <artifactId>jline-reader</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-builtins</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
