--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -75,6 +75,10 @@
             <groupId>org.jline</groupId>
             <artifactId>jline-groovy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-curses</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.felix</groupId>
